--- a/src/main/resources/templates/persona/personaEdit.html
+++ b/src/main/resources/templates/persona/personaEdit.html
@@ -11,10 +11,61 @@
 				<div class="x_panel">
 					<div class="x_title">
 						<h2 th:text="#{label.dati_del} + ' ' + ${personaWrapper.persona.ruolo.nome}">Dati del persona.ruolo</h2>
+						<button class="btn btn-primary pull-right" th:text="#{label.lookup}" data-toggle="modal" data-target=".modal-lookup">lookup</button>
 						<a class="btn btn-primary pull-right" th:text="#{label.nuovo}" th:href="@{|/accreditamento/${personaWrapper.accreditamentoId}/provider/${personaWrapper.providerId}/persona/newAnagrafica?ruolo=${personaWrapper.persona.ruolo}|}"></a>
 						<a class="btn btn-primary pull-right" th:text="#{label.annulla}" th:href="@{|/accreditamento/${personaWrapper.accreditamentoId}|}"></a>
 						<div class="clearfix"></div>
 					</div>
+					
+					<!-- finestra modale di lookup delle anagrafiche -->
+					<div class="modal fade modal-lookup" tabindex="-1" role="dialog" aria-hidden="true">
+						<div class="modal-dialog modal-lg">
+							<div class="modal-content">
+								<div class="modal-header">
+									<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span>
+									</button>
+									<h4 class="modal-title" id="myModalLabel" th:text="#{label.cerca_anagrafica}">Cerca anagrafica</h4>
+								</div>
+								<div class="modal-body">
+									<table class="datatable-responsive-search table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
+										<thead>
+											<tr>
+												<th th:text="#{label.codice_fiscale}">Codice fiscale</th>
+												<th th:text="#{label.nome}">Nome</th>
+												<th th:text="#{label.cognome}">Cognome</th>
+												<th th:text="#{label.seleziona}"></th>
+											</tr>
+										</thead>
+										<tbody>
+											<tr>
+												<td></td>
+												<td></td>
+												<td></td>
+												<td><button th:text="#{label.seleziona}"></button></td>
+											</tr>
+											<tr>
+												<td></td>
+												<td></td>
+												<td></td>
+												<td><button th:text="#{label.seleziona}"></button></td>
+											</tr>
+											<tr>
+												<td></td>
+												<td></td>
+												<td></td>
+												<td><button th:text="#{label.seleziona}"></button></td>
+											</tr>
+										</tbody>
+									</table>
+								</div>
+								<div class="modal-footer">
+									<button type="button" class="btn btn-primary close-modal" data-dismiss="modal" th:text="#{label.chiudi}">Chiudi</button>
+								</div>
+							</div>
+						</div>
+					</div>
+					
+					<!-- panel con il form -->
 					<div class="x_content">
 						<form id="formPersona" class="form-horizontal form-label-left" th:action="@{|/accreditamento/${personaWrapper.accreditamentoId}/provider/${personaWrapper.providerId}/persona/save|}"
 								method="post" enctype="multipart/form-data" novalidate="novalidate">
@@ -246,6 +297,11 @@
 				</div>
 			</div>
 		</div>
+		<script th:inline="javascript">
+			function openSearchPopup(){
+				
+			}
+		</script>
 	</div>
 </body>
 </html>
