fix alle librerie + gestione grafica della finestra modale delle persone
per l'autocompilazione delle anagrafiche delle persone

--- a/src/main/resources/static/gentella/css/custom.css
+++ b/src/main/resources/static/gentella/css/custom.css
@@ -1110,7 +1110,7 @@ table.jambo_table tbody tr.selected td {
   float: left;
 }
 .dataTables_filter {
-  width: 50%;
+  width: auto;
   float: right;
   text-align: right;
 }
@@ -1944,6 +1944,10 @@ span.section {
 .form-control {
   border-radius: 0;
   width: 100%;
+}
+.form-control.search {
+	border-radius: 0;
+    width: auto;
 }
 .form-horizontal .control-label {
   padding-top: 8px
