--- a/src/main/resources/templates/sede/sedeEdit.html
+++ b/src/main/resources/templates/sede/sedeEdit.html
@@ -224,7 +224,7 @@
 					$("#provincia_sede").click(function() {
 						sendAjaxRequestProvincia();
 					});
-					$("#comune_sede").click(function() {test
+					$("#comune_sede").click(function() {
 						sendAjaxRequestCAP();
 					});
 				}
