--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -131,6 +131,7 @@
 				"bPaginate": false,
 				"bInfo" : false,
 				scrollY: 300,
+				"bScrollCollapse": true,
 			    scroller: true,
 			    "columnDefs": [ { "targets": [ '_all' ], "orderable": false }, { "targets": [ 0 ], "orderData": [ 0, 1 ] } ],
 			    "order": [[ 0, 'asc' ], [ 1, 'asc' ]],
