sistemate le tab di stato

--- a/src/main/resources/templates/accreditamento/accreditamentoShow.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoShow.html
@@ -48,7 +48,7 @@
 														<div class="clearfix"></div>
 													</div>
 													<div class="x_content">
-														<table class="datatable-responsive table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
+														<table class="datatable-responsive-check table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
 															<thead>
 																<tr>
 																	<th th:text="#{label.sezione}">label.sezione</th>
@@ -113,8 +113,8 @@
 														<h2 th:text="#{label.richiesta_accreditamento}">label.richiesta_accreditamento</h2>
 														<div class="clearfix"></div>
 													</div>
-													<div class="x_content col-xs-12">
-														<table class="datatable-responsive table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
+													<div class="x_content">
+														<table class="datatable-responsive-check table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
 															<thead>
 																<tr>
 																	<th th:text="#{label.sezione}">label.sezione</th>
@@ -149,12 +149,12 @@
 														<h2 th:text="#{label.responsabili}">responsabili</h2>
 														<div class="clearfix"></div>
 													</div>
-													<div class="x_content col-xs-12">
-														<table class="datatable-responsive table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
+													<div class="x_content">
+														<table class="datatable-responsive-check table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
 															<thead>
 																<tr>
 																	<th th:text="#{label.responsabile}">Responsabile</th>
-																	<th th:text="#{label.stato_inserimento}">Stato inserimento</th>
+																	<th th:text="#{label.stato}">Stato inserimento</th>
 																</tr>
 															</thead>
 															<tbody>
@@ -218,12 +218,12 @@
 														<h2 th:text="#{label.allegati}">allegati</h2>
 														<div class="clearfix"></div>
 													</div>
-													<div class="x_content col-xs-12">
-														<table class="datatable-responsive table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
+													<div class="x_content">
+														<table class="datatable-responsive-check table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
 															<thead>
 																<tr>
 																	<th th:text="#{label.allegato}">Allegato</th>
-																	<th th:text="#{label.stato_inserimento}">Stato inserimento</th>
+																	<th th:text="#{label.stato}">Stato inserimento</th>
 																</tr>
 															</thead>
 															<tbody>
